src/test/ui/codemap_tests/issue-28308.stderr
error[E0600]: cannot apply unary operator `!` to type `&'static str`
  --> $DIR/issue-28308.rs:12:5
   |
LL |     assert!("foo");
   |     ^^^^^^^^^^^^^^^
   |
   = note: an implementation of `std::ops::Not` might be missing for `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0600`.
